// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Brand > renders all shape variants in Name story 1`] = `
<div>
  <div
    class="flex gap-6 items-center"
  >
    <span
      class="inline-flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="inline-block h-8 w-8"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Spenicle
        </title>
        <rect
          fill="#e07a5f"
          height="32"
          width="32"
        />
        <g
          transform="translate(16, 16) scale(0.625) translate(-12, -12)"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
            fill="white"
          />
        </g>
      </svg>
    </span>
    <span
      class="inline-flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="inline-block h-8 w-8"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Spenicle
        </title>
        <rect
          fill="#e07a5f"
          height="32"
          rx="8"
          width="32"
        />
        <g
          transform="translate(16, 16) scale(0.625) translate(-12, -12)"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
            fill="white"
          />
        </g>
      </svg>
    </span>
    <span
      class="inline-flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="inline-block h-8 w-8"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Spenicle
        </title>
        <circle
          cx="16"
          cy="16"
          fill="#e07a5f"
          r="16"
        />
        <g
          transform="translate(16, 16) scale(0.625) translate(-12, -12)"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
            fill="white"
          />
        </g>
      </svg>
    </span>
  </div>
</div>
`;

exports[`Brand > renders all size variants in Sizes story 1`] = `
<div>
  <div
    class="flex flex-col gap-4"
  >
    <span
      class="inline-flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="inline-block h-6 w-6"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Spenicle
        </title>
        <rect
          fill="#e07a5f"
          height="32"
          width="32"
        />
        <g
          transform="translate(16, 16) scale(0.625) translate(-12, -12)"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
            fill="white"
          />
        </g>
      </svg>
    </span>
    <span
      class="inline-flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="inline-block h-6 w-6"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Spenicle
        </title>
        <rect
          fill="#e07a5f"
          height="32"
          width="32"
        />
        <g
          transform="translate(16, 16) scale(0.625) translate(-12, -12)"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
            fill="white"
          />
        </g>
      </svg>
    </span>
    <span
      class="inline-flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="inline-block h-8 w-8"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Spenicle
        </title>
        <rect
          fill="#e07a5f"
          height="32"
          width="32"
        />
        <g
          transform="translate(16, 16) scale(0.625) translate(-12, -12)"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
            fill="white"
          />
        </g>
      </svg>
    </span>
    <span
      class="inline-flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="inline-block h-10 w-10"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Spenicle
        </title>
        <rect
          fill="#e07a5f"
          height="32"
          width="32"
        />
        <g
          transform="translate(16, 16) scale(0.625) translate(-12, -12)"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
            fill="white"
          />
        </g>
      </svg>
    </span>
    <span
      class="inline-flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="inline-block h-12 w-12"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Spenicle
        </title>
        <rect
          fill="#e07a5f"
          height="32"
          width="32"
        />
        <g
          transform="translate(16, 16) scale(0.625) translate(-12, -12)"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
            fill="white"
          />
        </g>
      </svg>
    </span>
  </div>
</div>
`;

exports[`Brand > renders default brand (rounded) 1`] = `
<div>
  <span
    class="inline-flex items-center gap-2"
  >
    <svg
      aria-hidden="true"
      class="inline-block h-8 w-8"
      fill="none"
      height="32"
      viewBox="0 0 32 32"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Spenicle
      </title>
      <rect
        fill="#e07a5f"
        height="32"
        rx="8"
        width="32"
      />
      <g
        transform="translate(16, 16) scale(0.625) translate(-12, -12)"
      >
        <path
          d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
          fill="white"
        />
      </g>
    </svg>
  </span>
</div>
`;
